feat(contact-form): add cf7 plugin

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -964,3 +964,11 @@ footer .secondary-links a {
   background: $secondary-color;
   color: $white;
 }
+
+
+/*
+ * Contact Form
+ */
+.wpcf7 br {
+  display: none;
+}
