--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1065,3 +1065,7 @@ footer .secondary-links a {
   border-radius: 3px;
   overflow: hidden;
 }
+
+.otgs-development-site-front-end {
+  display: none !important;
+}
