feat(contact-hero): update block

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -973,6 +973,10 @@ footer .secondary-links a {
   display: none;
 }
 
+.wpcf7 select {
+  margin: 0;
+}
+
 .wpcf7 .wpcf7-submit {
   display: inline-block;
   vertical-align: middle;
