--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1117,3 +1117,19 @@ footer .secondary-links a {
     transform: translate(-150%, 10%);
   }
 }
+
+
+/*
+ * Single Latest
+ */
+.single-latest .article-info {
+  display: block;
+}
+
+.single-latest .article-info *:is(h1, h2, h3, h4, h5, h6) {
+  margin-top: 1.5em;
+}
+
+.single-latest .article-info *:is(h3, h4, h5, h6) {
+  margin-top: 1em;
+}
