--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1220,19 +1220,112 @@ footer .secondary-links a {
  * Career Form
  */
 .career-form {
+  & > .cell {
+    width: 100%;
+    max-width: 888px;
+    margin-inline: auto;
+    margin-top: 60px;
+  }
+
+  .grid-two {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 28px;
+  }
+
+  .wpcf7-submit {
+    float: none !important;
+  }
+  
   input,
   textarea {
     padding: 1rem 1.5625rem;
-
     border: none;
     background: $white;
     color: $black;
-
     font-size: 24px;
     font-family: $header-font-family;
-
     &::placeholder {
       color: $black;
     }
   }
+
+  input {
+    height: 4rem;
+  }
+
+  textarea {
+    height: 120px;
+  }
+
+  p {
+    margin-bottom: 1rem;
+  }
+
+  /*
+   * File Field
+   */
+  .file-field {
+    position: relative;
+    display: flex;
+    align-items: center;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    height: 3.2375rem;
+    margin: 0 0 1rem;
+    padding: .9rem;
+    border: 1px solid #B2B2B2;
+    border-radius: 3px;
+    background-color: #fefefe;
+    -webkit-box-shadow: inset 0 0px 0px rgba(51,63,88,0);
+    box-shadow: inset 0 0px 0px rgba(51,63,88,0);
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1.5;
+    color: #333F58;
+    -webkit-transition: border-color 0.25s ease-in-out,-webkit-box-shadow 0.5s;
+    transition: border-color 0.25s ease-in-out,-webkit-box-shadow 0.5s;
+    transition: box-shadow 0.5s,border-color 0.25s ease-in-out;
+    transition: box-shadow 0.5s,border-color 0.25s ease-in-out,-webkit-box-shadow 0.5s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    padding: 1rem 1.5625rem;
+    border: none;
+    background: $white;
+    color: $black;
+    font-size: 24px;
+    font-family: $header-font-family;
+    height: 4rem;
+
+    &::placeholder {
+      color: $black;
+    }
+
+    &::after {
+      content: url(../img/file-icon.svg);
+      position: absolute;
+      top: 50%;
+      right: 26px;
+      transform: translateY(-40%);
+    }
+
+    .wpcf7-form-control-wrap {
+      display: none;
+    }
+  }
+
+  /*
+   * Description field
+   */
+  .description-field {
+    font-size: 24px;
+    font-family: $header-font-family;
+    margin-block: 1rem 2rem;
+  }
+
 }
