--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1231,7 +1231,7 @@ footer .secondary-links a {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 28px;
+    column-gap: 28px;
   }
 
   .wpcf7-submit {
@@ -1337,7 +1337,39 @@ footer .secondary-links a {
     font-family: $header-font-family;
     margin-block: 1rem 2rem;
   }
+  
+  @include breakpoint(small down) { 
+    & > .cell {
+      margin-top: 40px;
+    }
 
+    .grid-two {
+      grid-template-columns: 1fr;
+    }
+
+    input,
+    textarea,
+    .file-field,
+    .description-field {
+      height: 3.2375rem;
+      padding: .9rem;
+      font-size: 1rem;
+    }
+
+    textarea {
+      height: 8rem;
+    }
+
+    .file-field:after {
+      transform: translateY(-40%) scale(0.8);
+      right: 1rem;
+    }
+    
+    .description-field {
+      margin-block: 0;
+      padding: 0;
+    }
+  }
 }
 
 
@@ -1398,6 +1430,10 @@ footer .secondary-links a {
   .wp-block-columns {
     column-gap: 2rem;
     row-gap: 0;
+  }
+
+  video {
+    width: 100%;
   }
 
   audio {
