fix(reports): make cards the same height

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1518,3 +1518,13 @@ footer .secondary-links a {
   margin-top: 2rem;
   color: $white;
 }
+
+
+/*
+ * Reports Block Fixes
+ */
+.reports {
+  .card.large {
+    height: calc(100% - 30px);
+  }
+}
