fix(systems): make cards of equal height

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1528,3 +1528,13 @@ footer .secondary-links a {
     height: calc(100% - 30px);
   }
 }
+
+
+/*
+ * Systems Block Fixes
+ */
+.systems {
+  .card.large {
+    height: calc(100% - 30px);
+  }
+}
