feat: changed map

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -825,7 +825,7 @@ footer {
                                       .grid-x { margin-top: 330px; }
     }
 }
-.map-block2 { overflow: hidden; background-image: url(../img/map2.svg); background-position: top 0px center; background-repeat: no-repeat; background-size: 80%; 
+.map-block2 { overflow: hidden; background-image: url(../img/map1.svg); background-position: center 20%; background-repeat: no-repeat; background-size: 80%; 
               .card { background-color: rgba(255,255,255,0.8); }
 }
 
