--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -627,7 +627,7 @@ footer {
 
 //LOGO BLOCK
 .logos {  
-    img { margin: 30px 30px 0 30px; filter: grayscale(100%); opacity: 0.36; }
+    img { margin: 30px 30px 0 30px; filter: grayscale(100%); opacity: 0.36; object-fit: contain; }
     @include breakpoint(small down) { display: block; columns: 2;
         a { padding: 0 5px; }
         img { width: auto; margin: 20px auto 0; display: block; }
@@ -636,14 +636,41 @@ footer {
 
 //ARTICLES
 .article-grid { 
-    .column {display: flex; flex-wrap: wrap; justify-content: space-between; position: relative;
-        &:before { content:""; width: 1px; height: 100%; background: $light-gray; position: absolute; left: 32.3%; top:0; bottom:0;}
-        &:after { content:""; width: 1px; height: 100%; background: $light-gray; position: absolute; left: 67.7%; top:0; bottom:0;}
+    .column {
+      position: relative;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: 100px;
+
+      &:before { 
+        content:""; 
+        width: 1px; 
+        height: 100%; 
+        background: $light-gray; 
+        position: absolute; 
+        left: 32.3%; 
+        top:0; 
+        bottom:0;
+      }
+
+      &:after { 
+        content:""; 
+        width: 1px; 
+        height: 100%; 
+        background: $light-gray; 
+        position: absolute; 
+        left: 67.7%; 
+        top:0; 
+        bottom:0;
+      }
     }
-    article { margin-bottom: 50px;  /*width: 100%; max-width: 434px;*/ width: 28.15%;
-        img { border-radius: 6px; margin-bottom: 20px; }
-        h4 { margin-bottom: 10px; color: $black; line-height: 1.3; }
-        p { color: $black; }
+
+    article { 
+      margin-bottom: 50px;
+
+      img { border-radius: 6px; margin-bottom: 20px; width: 100%; }
+      h4 { margin-bottom: 10px; color: $black; line-height: 1.3; }
+      p { color: $black; }
     }
     
     .article-info { display: flex; align-items: flex-start; 
@@ -652,18 +679,22 @@ footer {
             span { padding: 2px 7px; font-size: 12px; font-weight: bold; text-transform: uppercase; letter-spacing: 0.05em; border-radius: 3px; background: rgba(50,153,202, 0.12); margin: 2.5px; }
         }
     }
+
     @include breakpoint(medium down) {  
-        article { width:45.8%; }
         .column {
+            grid-template-columns: repeat(2, 1fr);
             &:before { left: 50%; }
             &:after { display: none;}
         }
     }
+
     @include breakpoint(small down) {  
-        article { width: 100%; 
+        article { 
             p { display: none; }
         }
+
         .column {
+            grid-template-columns: 1fr;
             &:before, &:after { display: none; }
         }
     }
